--- a/app/celery-remote-worker/Dockerfile
+++ b/app/celery-remote-worker/Dockerfile
@@ -1,8 +1,10 @@
-FROM python:3.7
+FROM ubuntu:18.04
 
-# Get the ODBC driver for Microsoft SQL Server
+# Get the ODBC driver for Microsoft SQL Server and dependencies
 RUN apt-get update \
 && apt-get install -y \
+    python3-pip \
+    python3-dev \
     apt-transport-https \
     ca-certificates \
     curl \
@@ -20,8 +22,11 @@ RUN apt-get update \
 && apt-get clean
 
 COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 RUN rm requirements.txt
 
-COPY . /
-WORKDIR /app/celery-remote-worker
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
+COPY . .
+
+CMD ["celery", "worker", "-A", "remote_worker", "-l", "INFO"]
