update static network, README.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
       context: ./app/celery-remote-worker
     env_file:
       - config.env
+    networks:
+      static-network:
+        ipv4_address: 172.30.0.2
     depends_on:
       - database
       - broker
@@ -27,11 +30,26 @@ services:
     image: mcr.microsoft.com/mssql/server:2019-GA-ubuntu-16.04
     ports:
       - "1433:1433"
+    networks:
+      static-network:
+        ipv4_address: 172.30.0.3
     env_file:
       - db_config.env
 
   broker:
     image: rabbitmq
+    networks:
+      static-network:
+        ipv4_address: 172.30.0.4
 
   backend:
     image: redis
+    networks:
+      static-network:
+        ipv4_address: 172.30.0.5
+
+networks:
+  static-network:
+    ipam:
+      config:
+        - subnet: 172.30.0.0/16
